# lie-nn-torch

./: LICENSE  README.md  pyproject.toml  setup.cfg
lie-nn-torch/: LICENSE  __init__.py  _activation.py  _extract.py  _fc.py  _gate.py  _linear.py  _linear_test.py  _lorentz_irreps.py  _tensor_product.py  _tensor_product_test.py  symmetric_contraction.py  utils.py
