[metadata]
name = lie_nn_torch
version = attr: lie_nn_torch.__version__
description = Equivariant Neural Networks for Lie groups.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lie-nn/lie-nn-torch
classifiers =
    Programming Language :: Python :: 3.7
license = MIT License
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    multipledispatch
    lie_nn